# immich-py

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  build_entry.py  build_executable.py  pyproject.toml
.github/workflows/: build-release.yml
immich_py/: __init__.py  progress.py
immich_py/api/: __init__.py  album.py  asset.py  asset_hash.py  client.py  job.py  server.py  tag.py  upload_utils.py  user.py
immich_py/cli/: __init__.py  main.py  utils.py
immich_py/cli/commands/: __init__.py  album.py  asset.py  job.py  server.py  tag.py
immich_py/models/: __init__.py  album.py  asset.py  job.py  tag.py  user.py
scripts/: run_integration_tests.sh
tests/: __init__.py
tests/integration/: README.md  __init__.py  conftest.py  test_asset_upload.py  test_assets.py  test_server.py
tests/unit/: test_progress.py
tests/unit/api/: __init__.py  conftest.py  test_asset_hash.py  test_asset_upload.py  test_client.py  test_client_additional.py  test_upload_utils.py
